<resources xmlns:android="http://schemas.android.com/apk/res/android" android:autoLink="web">
    <string name="app_name">MicoPacks</string>
    <string name="loading">Loading Iconpacks</string>
    <string name="loading_preview">Generate preview</string>
    <string name="loading_stats">Calculating stats</string>
    <string name="title">Action for </string>
    <string name = "icon_pack_name">Icon Pack Name</string>
    <string name="preferences">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="tasker_label">MicoPacks Plugin</string>
    <string name="install">Install</string>
    <string name="no_browser">No browser</string>
    <string name="close">Close</string>
    <string name="apply_manual">%1$s doesn\'t support direct apply, you can apply %2$s manually from the launcher settings.</string>
    <string name="apply_manual_evie">Tap and hold on homescreen - Settings - Iconpack - choose %s.</string>
    <string name="apply_launch_failed">Unable to launch %s settings</string>
    <string name="apply_launcher_not_installed">%s is not installed. Do you want to open
        Google Play Store to download and install it?</string>
    <string name="nodefault">No Default Launcher found</string>
    <string name="twofortyfouram_locale_breadcrumb_format">%1$s%2$s%3$s</string>
    <string name="twofortyfouram_locale_breadcrumb_separator">\u0020&gt;\u0020</string>
    <string name="no_data_available">No compatible icon packs found</string>

    <string name="no_preview">All installed icons are masked by this pack. Kindly check details view.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="help">Help</string>
    <string name="Favorites">Favorites</string>
    <string name="about">About</string>
    <string name="saverules">Save</string>
    <string name="about_content">
        Micopacks helps managing installed iconpacks on the device.
        Also helps auto applying iconpacks using tasker/locale plugin. Support various launchers and iconpacks.\n\n

        Libraries Used: \n
        ------------------ \n
        RootTools by Stericson \n
        libsuperuser by Chainfire \n
        material-dialogs by afollestad \n\n
        greenDAO \n\n
        changeloglib \n\n


        Special - Credits: \n
        ---------------------- \n
        preferences-manager by SimonMarquis \n
        Candybar-library by danimahardhika \n\n


        Developed by github.com/ukanth  \n
    </string>

    <string name="about_help">Tasker plugin - Requires ROOT for Nova Launcher</string>
    <string name="notsupported">Detected %s , Sorry not supported yet!</string>
    <string name="noicons">Icons: </string>
    <string name="report">Report a problem</string>
    <string name="use_dark">Dark theme</string>
    <string name="access_sort">Sort</string>
    <string name="alphabet">By alphabet</string>
    <string name="lastupdated">By last update</string>
    <string name="iconcount">By icon count</string>
    <string name="iconsize">By package size</string>
    <string name="authorname">By Author Name</string>
    <string name="iconpercent">By match percent</string>
    <string name="total_icons">Show icon count</string>
    <string name="show_notification">Notify on new icon pack install</string>
    <string name="please_wait_normal">Please wait ... </string>
    <string name="action_search">Search</string>
    <string name="changelog">Changelog</string>
    <string name="icon_progress">Icons Supported</string>

    <string name="icon_request_installed_apps" formatted="false">Total\n%d installed apps - ( %s )</string>
    <string name="icon_request_themed_apps">Themed\n%d apps</string>
    <string name="icon_request_missed_apps">Missed\n%d apps</string>

    <string name="iconCount">Total Icons</string>

    <string name="iconPercent">Covered</string>
    <string name="iconinstalled"> Iconpack installed/updated</string>
    <string name="iconMask">Preview of Iconmask</string>
    <string name="enable_auto_theming">Enable Auto-Theming</string>
    <string name="enable_auto_theming_summary">Generate themed icons for unsupported apps when previewing icon packs</string>
    <string name="auto_themed_section">Auto-Themed Icons (%d)</string>
    <string name="auto_themed_description">These icons are generated automatically using the icon pack\'s theming system</string>
    <string name="enable_fab_button">Show Apply Button</string>
    <string name="preview_nontheme">Show non-themed icons in preview</string>
    <string name="use_root">Make use of ROOT along with tasker</string>


    <string name="license_checking">Checking license …</string>
    <string name="license_check">License Check</string>
    <string name="license_check_success">License check success, thank you for downloading the app from Play Store.</string>
    <string name="license_check_failed">License check failed, you didn\'t download this app from Play Store.
        You will not able to use the app.</string>
    <string name="license_check_retry">Unable to check license, please try again in a few moments</string>
    <string name="showsize">Show application size</string>
    <string name="show_percent">Show Percentage</string>
    <string name="show_authorname">Show Author Name</string>
    <string name="forcereload">Rebuild list</string>
    <string name="onlysupportedroot">Supported through root mode only</string>
    <string name="action_random">Random</string>
    <string name="selected_pack">Selected Pack:</string>
    <string name="sharelist">Share</string>
    <string name="generating">Generating image, please wait ...</string>
    <string name="show_favs">Enable Favorites</string>
    <string name="unable_iconpack">No iconpack found</string>
    <string name="unable_screenshot">Sorry! Unable to create screenshot</string>
    <string name="save">Save</string>
    <string name="icon_search">Icon Search</string>
    <string name="searching">Searching</string>
    <string name="select_launcher">Select Launcher to apply iconpack</string>
    <string name="apply">Apply</string>
    <string name="open">Open</string>
    <string name="use_launcher_menu">Enable Launcher prompt</string>

    <!-- Card action buttons -->
    <string name="action_apply">Apply</string>
    <string name="action_preview">Preview</string>
    <string name="action_stats">Stats</string>
    <string name="action_launch">Launch</string>
    <string name="action_playstore">Play Store</string>
    <string name="action_uninstall">Uninstall</string>

    <!-- Stat chip labels -->
    <string name="stat_icons">icons</string>
    <string name="stat_size">size</string>
    <string name="stat_themed">themed</string>
    
    <!-- Icon dialog -->
    <string name="icon_preview">Icon preview</string>
    <string name="save_icon">Save icon</string>
    <string name="add_to_favorites">Add to favorites</string>
</resources>
