<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="dark_theme"
        android:title="@string/use_dark" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="notify_install"
        android:title="@string/show_notification" />


    <PreferenceCategory android:title="Main UI">

        <SwitchPreference
            android:defaultValue="false"
            android:key="show_favorites"
            android:title="@string/show_favs" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="total_icons"
            android:title="@string/total_icons" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="showpack_percent"
            android:title="@string/show_percent" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="showpack_size"
            android:title="@string/showsize" />


    </PreferenceCategory>


    <PreferenceCategory android:title="Others">
        <SwitchPreference
            android:defaultValue="false"
            android:key="enable_fab"
            android:title="@string/enable_fab_button" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="preview_nonthemed"
            android:title="@string/preview_nontheme" />

        <ListPreference
            android:defaultValue="5"
            android:entries="@array/col"
            android:entryValues="@array/colvalue"
            android:key="preview_col"
            android:title="Number of Columns in Preview" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Misc">
        <SwitchPreference
            android:defaultValue="true"
            android:key="use_root_tasker"
            android:title="@string/use_root" />
    </PreferenceCategory>


</PreferenceScreen>
